fix outer paths