@@ -1,5 +1,6 @@
 package ru.hse.software.design.commands;
 
+import org.apache.commons.lang3.SystemUtils;
 import ru.hse.software.design.Environment;
 import ru.hse.software.design.Path;
 
@@ -8,6 +9,7 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 
 /**
  * Executes outer command in a separate process.
@@ -24,6 +26,9 @@ public class OuterCommand extends Command {
      * @param path        path to command
      **/
     public OuterCommand(String commandName, List<String> commandArgs, Path path) {
+        if (SystemUtils.IS_OS_WINDOWS) {
+            commandName = commandName + ".exe";
+        }
         this.commandWithArguments.add(commandName);
         this.commandWithArguments.addAll(commandArgs);
         this.path = path;
@@ -39,7 +44,6 @@ public class OuterCommand extends Command {
     @Override
     public int execute(String input) {
         String[] commandArray = commandWithArguments.toArray(new String[0]);
-        String[] environmentVariablesAndValues = Environment.getAll();
         String commandDirectory = null;
         for (var directory : path.getPaths()) {
             if (new File(directory, command).exists()) {
@@ -47,11 +51,18 @@ public class OuterCommand extends Command {
             }
         }
         if (commandDirectory == null) {
+            if (SystemUtils.IS_OS_WINDOWS) {
+                errorStream.println("Command " + command.substring(0, command.length() - 4) + " not found");
+                return 1;
+            }
             errorStream.println("Command " + command + " not found");
             return 1;
         }
         try {
-            Process process = Runtime.getRuntime().exec(commandArray, environmentVariablesAndValues, new File(commandDirectory));
+            var pb = new ProcessBuilder(commandArray);
+            Map<String, String> env = pb.environment();
+            env.putAll(Environment.getAll());
+            var process = pb.start();
             process.getOutputStream().write(input.getBytes(StandardCharsets.UTF_8));
             int returnCode = process.waitFor();
             output = new String(process.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
